# tripleten-sprint7-project

./: Makefile  README.md  pyproject.toml  requirements.txt
docs/: mkdocs.yml
docs/docs/: index.md
notebooks/: EDA.ipynb
tripleten_sprint7_project/: __init__.py  app.py  dataset.py  features.py  plots.py
tripleten_sprint7_project/modeling/: predict.py  train.py
