[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "tripleten_sprint7_project"
version = "0.0.1"
description = "data science project for the tripleten sprint7 project. A web app."
authors = [
  { name = "Rodolfo Brise\u00f1o" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.12.0"


[tool.ruff]
line-length = 99
src = ["tripleten_sprint7_project"]
include = ["pyproject.toml", "tripleten_sprint7_project/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["tripleten_sprint7_project"]
force-sort-within-sections = true

